Update soil chart

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Environmental Data Dashboard</title>
+    <title>Environmental Dashboard</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   </head>
   <body>
