Add humid and temp chart

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Environmental Dashboard</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script type="module" src="charts/soil_chart.js"></script>
+    <script type="module" src="charts/temp_chart.js"></script>
+    <script type="module" src="charts/humid_chart.js"></script>
   </head>
   <body>
     <h1>Environmental Dashboard</h1>
-    <div id="chart" style="width: 100%; height: 75vh"></div>
-    <script type="module" src="charts/utils.js"></script>
-    <script type="module" src="charts/soil_chart.js"></script>
+    <div id="soilChart" style="width: 100%; height: 500px"></div>
+    <div id="tempChart" style="width: 100%; height: 500px"></div>
+    <div id="humidChart" style="width: 100%; height: 500px"></div>
   </body>
 </html>
